--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,17 @@
  *= require_tree .
  *= require_self
  */
+
+p
+{
+	background-color: yellow;
+	font-size: 20px;
+	font-family: "Times New Roman", Georgia, Serif;
+	width: 50%
+}
+
+img
+ {
+width: 50%;
+height: 400px;
+}
